--- a/Public/cardDesign.css
+++ b/Public/cardDesign.css
@@ -10,7 +10,7 @@
     background-position: -30px -20px;
     background-size: 180px 260px;
     background-repeat: no-repeat;
-
+    text-align: center;
     width:120px;
     height:200px;
     border-radius: 5px;
@@ -52,6 +52,7 @@
     font-size: 2em;
     height: 34px;
     width: 100%;
+    text-align: center;
     border-bottom: 2px solid var(--cardBorderColor);
     z-index: 1;
 }
@@ -112,6 +113,7 @@
     transform: translateX(-50%);
     line-height: 25px;
     font-size: 1.2em;
+    text-align: center;
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -229,5 +231,23 @@
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     color: var(--bloodColor);
-    transition: top 0.1s cubic-bezier(0,.95,.25,1);
+    
+}
+
+.freeBlood{
+    position: absolute;
+    background-color: var(--bloodColor);
+    background-size: 50px;
+
+    
+    mask-image: url('../assets/blood.svg');
+    mask-size: 50px;
+    -webkit-mask-image: url('../assets/blood.svg');
+    -webkit-mask-size: 50px;
+
+    width: 50px;
+    height: 50px;
+    margin: 0 -15px 0 0;
+    display: inline-block;
+    z-index: 10;
 }
